Eliminate/local/logs/project.log
2017-06-12T03:33:35.921Z - normal: Load ~/.CocosCreator/settings.json
2017-06-12T03:33:35.921Z - normal: checking language setting...
2017-06-12T03:33:35.921Z - normal: Language: zh
2017-06-12T03:33:37.217Z - success: protocol editor-framework registered
2017-06-12T03:33:37.217Z - success: protocol app registered
2017-06-12T03:33:37.217Z - success: protocol theme registered
2017-06-12T03:33:37.217Z - success: protocol profile registered
2017-06-12T03:33:37.217Z - success: protocol packages registered
2017-06-12T03:33:37.217Z - success: protocol unpack registerred
2017-06-12T03:33:37.217Z - success: protocol disable-commonjs registerred
2017-06-12T03:33:37.498Z - normal: connected!
2017-06-12T03:33:37.498Z - normal: Check project D:\000\Eliminate
2017-06-12T03:33:37.498Z - normal: Initializing Cocos2d
2017-06-12T03:33:37.654Z - normal: Initializing Asset Database
2017-06-12T03:33:37.669Z - success: protocol uuid registerred
2017-06-12T03:33:37.669Z - success: protocol db registerred
2017-06-12T03:33:37.669Z - success: protocol thumbnail registerred
2017-06-12T03:33:37.669Z - normal: Loading editor/builtin packages
2017-06-12T03:33:37.763Z - success: assets loaded
2017-06-12T03:33:37.763Z - success: builder loaded
2017-06-12T03:33:37.763Z - success: hierarchy loaded
2017-06-12T03:33:37.763Z - success: inspector loaded
2017-06-12T03:33:37.778Z - success: keystore loaded
2017-06-12T03:33:37.778Z - success: node-library loaded
2017-06-12T03:33:37.778Z - success: preferences loaded
2017-06-12T03:33:37.778Z - success: project-importer loaded
2017-06-12T03:33:37.778Z - success: project-settings loaded
2017-06-12T03:33:37.794Z - success: ui-kit loaded
2017-06-12T03:33:37.794Z - success: ui-grid loaded
2017-06-12T03:33:37.794Z - success: scene loaded
2017-06-12T03:33:37.794Z - success: sprite-editor loaded
2017-06-12T03:33:37.825Z - success: store loaded
2017-06-12T03:33:37.825Z - success: timeline loaded
2017-06-12T03:33:37.825Z - normal: Loading builtin packages
2017-06-12T03:33:37.825Z - success: anysdk loaded
2017-06-12T03:33:37.825Z - success: asset-db-debugger loaded
2017-06-12T03:33:37.825Z - success: code-editor loaded
2017-06-12T03:33:37.841Z - success: color-picker loaded
2017-06-12T03:33:37.841Z - success: console loaded
2017-06-12T03:33:37.841Z - success: package-manager loaded
2017-06-12T03:33:37.841Z - success: tester loaded
2017-06-12T03:33:37.841Z - success: ui-kit-preview-extra loaded
2017-06-12T03:33:37.841Z - success: ui-kit-preview loaded
2017-06-12T03:33:37.841Z - success: ui-tree loaded
2017-06-12T03:33:37.872Z - normal: Initializing project D:\000\Eliminate
2017-06-12T03:33:37.872Z - normal: Loading packages
2017-06-12T03:33:37.888Z - success: quick-open loaded
2017-06-12T03:33:38.059Z - success: quick-preview loaded
2017-06-12T03:33:38.059Z - normal: Watching packages
2017-06-12T03:33:38.090Z - normal: Run Application
2017-06-12T03:33:39.151Z - failed: [db-task][init] Failed to import asset D:\000\Eliminate\assets\script\BoxPanel.js, message: Compile error: SyntaxError: unknown: Unexpected character '#' (513:12)
  511 | 
  512 | 
> 513 |             #warn
      |             ^
  514 |             //这一块 逻辑 有问题
  515 | 
  516 |             if(showDelayAnimation) {
    at Parser.pp$5.raise (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4373:13)
    at Parser.getTokenFromCode (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1145:10)
    at Parser.readToken (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:774:19)
    at Parser.nextToken (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:764:19)
    at Parser.next (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:689:10)
    at Parser.eat (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:696:12)
    at Parser.pp$1.parseBlockBody (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2218:16)
    at Parser.pp$1.parseBlock (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2202:8)
    at Parser.pp$1.parseStatement (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1823:19)
    at Parser.pp$1.parseIfStatement (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2014:26)
2017-06-12T03:33:39.385Z - success: preview server running at http://localhost:7456
2017-06-12T03:33:39.385Z - normal: Compiling scripts...
2017-06-12T03:33:42.578Z - normal: 1.4.2
